bk_ida/gccida/c1/output_constant_def_contents
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant_def_contents/src/varasm.c:3921:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)LOBYTE( v5->block.supercontext), v6, 0); 
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant_def_contents/src/obj/varasm.o] Error 1
